--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/hesscm/weekend-sql-to-do-list#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "pg": "^8.7.1"
   }
 }
